force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/CEL_Campaign_RegionCountryStore__c.object-meta.xml
<CustomObject>
    <description>region, Country and Stores for a campaign</description>
    <label>Campaign Region Country Store</label>
    <nameField>
        <label>Campaign region Country Store Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Campaigns Regions Countries Stores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>