force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/fields/cel_Campaign__c.field-meta.xml
<CustomField>
    <fullName>cel_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipName>Campaigns_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>