force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/fields/cel_Country__c.field-meta.xml
<CustomField>
    <fullName>cel_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>cel_transcodification__c</referenceTo>
    <relationshipLabel>Campaigns Regions Countries Stores (Country)</relationshipLabel>
    <relationshipName>Campaigns_Regions_Countries_Stores1</relationshipName>
    <type>Lookup</type>
</CustomField>