force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/fields/cel_Region__c.field-meta.xml
<CustomField>
    <fullName>cel_Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>cel_transcodification__c</referenceTo>
    <relationshipLabel>Campaigns Regions Countries Stores</relationshipLabel>
    <relationshipName>Campaigns_Regions_Countries_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>