force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/fields/cel_Store__c.field-meta.xml
<CustomField>
    <fullName>cel_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Campaigns_Stores</relationshipName>
    <type>Lookup</type>
</CustomField>