force-app/main/default/objects/CEL_Campaign_RegionCountryStore__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>cel_Campaign__c</columns>
    <columns>cel_Region__c</columns>
    <columns>cel_Country__c</columns>
    <columns>cel_Store__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>